RESOLVED FIXED315066
Crash in WebCore::PositionedLayoutConstraints::PositionedLayoutConstraints; WebCore::RenderBox::containingBlockLogicalWidthForContent
https://bugs.webkit.org/show_bug.cgi?id=315066
Summary Crash in WebCore::PositionedLayoutConstraints::PositionedLayoutConstraints; W...
alan
Reported 2026-05-18 19:18:51 PDT
Attachments
[fast-cq]Patch (4.53 KB, patch)
2026-05-18 19:44 PDT, alan
no flags
alan
Comment 1 2026-05-18 19:44:26 PDT
Created attachment 479709 [details] [fast-cq]Patch
EWS
Comment 2 2026-05-19 05:09:04 PDT
Committed 313479@main (5e2525e60a91): <https://commits.webkit.org/313479@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479709 [details].
Note You need to log in before you can comment on or make changes to this bug.