REGRESSION (312086@main): Crash in WebCore::PositionedLayoutConstraints::PositionedLayoutConstraints; WebCore::RenderBox::containingBlockLogicalWidthForContent https://bugs.webkit.org/show_bug.cgi?id=315066 <rdar://176987782>

Reviewed by Antti Koivisto.

The dialog renderer's styleDidChange fires before attachRendererInternal sets
its parent. styleChanged synchronously resolves the scroll-corner pseudo,
which evaluates the orientation @container, reads paddingBottom, and lands in
PositionedLayoutConstraints with parent still null.

Guard the parent lookup; before 312086@main parent() was only read at layout time, when the renderer is attached.

* LayoutTests/TestExpectations:
* LayoutTests/fast/css/container-query-orientation-modal-dialog-crash-expected.txt: Added.
* LayoutTests/fast/css/container-query-orientation-modal-dialog-crash.html: Added.
* Source/WebCore/rendering/PositionedLayoutConstraints.cpp:
(WebCore::PositionedLayoutConstraints::PositionedLayoutConstraints):

Canonical link: https://commits.webkit.org/313479@main