Source/WebCore/rendering/PositionedLayoutConstraints.cpp
@@ -50,7 +50,7 @@ PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& render
     : m_renderer(renderer)
     , m_container(downcast<RenderBoxModelObject>(*renderer.container())) // Using containingBlock() would be wrong for relpositioned inlines.
     , m_containingWritingMode(m_container->writingMode())
-    , m_parentWritingMode(renderer.parent()->writingMode())
+    , m_parentWritingMode(renderer.parent() ? renderer.parent()->writingMode() : WritingMode())
     , m_writingMode(style.writingMode())
     , m_selfAxis(selfAxis)
     , m_containingAxis(!isOrthogonal() ? selfAxis : oppositeAxis(selfAxis))
@@ -64,6 +64,7 @@ PositionedLayoutConstraints::PositionedLayoutConstraints(const RenderBox& render
     , m_insetAfter { 0_css_px }
 {
     ASSERT(m_container);
+    ASSERT(renderer.parent());
 
     // Compute basic containing block info.
     m_originalContainingRange = renderer.containingBlockRangeForPositioned(*m_container, m_physicalAxis);
